# ghc-syb

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  ghc-syb.cabal  stack-7.10.yaml  stack-8.0.yaml
instances/: ghc-syb.cabal
instances/GHC/SYB/: Instances.hs
scripts/ci/: build.sh
src/GHC/SYB/: Instances.hs  Utils.hs
utils/: CHANGELOG  ghc-syb-utils.cabal
utils/GHC/SYB/: Utils.hs
utils/test/: Regression.hs
utils/test/test-cases/: GithubIssue9.hs
