name:            ghc-syb-utils
version:         0.2.3.3
license:         BSD3
license-file:    LICENSE
author:          Claus Reinke
copyright:       (c) Claus Reinke 2008
maintainer:      Daniel Gröber <dxld@darkboxed.org>
homepage:        https://github.com/DanielG/ghc-syb
description:     Scrap Your Boilerplate utilities for the GHC API.
synopsis:        Scrap Your Boilerplate utilities for the GHC API.
category:        Development
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.10

extra-source-files: test/test-cases/*.hs

library
  build-depends:   base >= 4 && < 5
                 , syb >= 0.1.0
                 , ghc >= 7.10 && < 8.4
                 , bytestring

  hs-source-dirs:  .
  default-language: Haskell2010
  default-extensions: Rank2Types, CPP
  ghc-options:    -Wall

  exposed-modules: GHC.SYB.Utils



test-suite regression-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Regression.hs
  default-language: Haskell2010
  build-depends:
                base,
                directory,
                filepath,
                ghc,
                ghc-paths,
                ghc-syb-utils
